--- a/SecureLoginDelegate/MainWindow.xib
+++ b/SecureLoginDelegate/MainWindow.xib
@@ -18,12 +18,12 @@
                 <outlet property="window" destination="Na2-4i-xf1" id="RrV-8O-0BA"/>
             </connections>
         </customObject>
-        <window opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Na2-4i-xf1">
+        <window opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" visibleAtLaunch="YES" id="Na2-4i-xf1">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
         </window>
-        <viewController id="4V3-pd-eOt" userLabel="Login View Controller" customClass="LoginViewController">
+        <viewController modalTransitionStyle="crossDissolve" id="4V3-pd-eOt" userLabel="Login View Controller" customClass="LoginViewController">
             <layoutGuides>
                 <viewControllerLayoutGuide type="top" id="6T2-vI-TOj"/>
                 <viewControllerLayoutGuide type="bottom" id="5jF-K1-v1c"/>
@@ -67,7 +67,7 @@
                 <outlet property="loginButton" destination="Iit-PJ-R48" id="Jlf-zs-mrn"/>
             </connections>
         </viewController>
-        <viewController id="Iig-gU-gw7" userLabel="Protected Data View Controller" customClass="ProtectedDataViewController">
+        <viewController modalTransitionStyle="crossDissolve" id="Iig-gU-gw7" userLabel="Protected Data View Controller" customClass="ProtectedDataViewController">
             <layoutGuides>
                 <viewControllerLayoutGuide type="top" id="XGC-yR-dBg"/>
                 <viewControllerLayoutGuide type="bottom" id="LzH-71-8bm"/>
