--- a/SecureLoginDelegate/MainWindow.xib
+++ b/SecureLoginDelegate/MainWindow.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UIApplication">
@@ -15,6 +15,7 @@
             <connections>
                 <outlet property="dataViewController" destination="Iig-gU-gw7" id="oUO-Dy-gDz"/>
                 <outlet property="loginViewController" destination="4V3-pd-eOt" id="pO4-Qg-mcf"/>
+                <outlet property="secureDataController" destination="2pG-WT-2Qi" id="FiH-Jy-625"/>
                 <outlet property="window" destination="Na2-4i-xf1" id="RrV-8O-0BA"/>
             </connections>
         </customObject>
@@ -102,6 +103,21 @@
             </view>
             <connections>
                 <outlet property="lockButton" destination="W2r-bi-LiO" id="X1X-Lu-Zrb"/>
+            </connections>
+        </viewController>
+        <viewController id="2pG-WT-2Qi" customClass="ZTSecureDataController">
+            <layoutGuides>
+                <viewControllerLayoutGuide type="top" id="cxx-UJ-YAa"/>
+                <viewControllerLayoutGuide type="bottom" id="LO8-8e-UK3"/>
+            </layoutGuides>
+            <view key="view" contentMode="scaleToFill" id="bfb-hx-MwZ">
+                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            </view>
+            <connections>
+                <outlet property="dataViewController" destination="Iig-gU-gw7" id="okr-rd-ZFq"/>
+                <outlet property="loginViewController" destination="4V3-pd-eOt" id="41t-Nt-LZg"/>
             </connections>
         </viewController>
     </objects>
